--- a/src/SPerfAll/Specs/TheS.sPerf.Advertising.WebExecutors.Specs/TheS.sPerf.Advertising.WebExecutors.Specs.csproj
+++ b/src/SPerfAll/Specs/TheS.sPerf.Advertising.WebExecutors.Specs/TheS.sPerf.Advertising.WebExecutors.Specs.csproj
@@ -48,6 +48,32 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="WebExecutors\Specs\UnitTest1.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Modules\Advertising\TheS.sPerf.Advertising.BackServices.Contracts\TheS.sPerf.Advertising.BackServices.Contracts.csproj">
+      <Project>{BFDF8583-10AA-4AD2-A70D-5925FC6D06F1}</Project>
+      <Name>TheS.sPerf.Advertising.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Advertising\TheS.sPerf.Advertising.Commands\TheS.sPerf.Advertising.Commands.csproj">
+      <Project>{D25730E2-1B6C-44EB-A07D-9A11CFFD6B73}</Project>
+      <Name>TheS.sPerf.Advertising.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Advertising\TheS.sPerf.Advertising.DAL.Contracts\TheS.sPerf.Advertising.DAL.Contracts.csproj">
+      <Project>{1D198849-1AF7-4FEC-A4F8-8EDB193585B8}</Project>
+      <Name>TheS.sPerf.Advertising.DAL.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Advertising\TheS.sPerf.Advertising.Models\TheS.sPerf.Advertising.Models.csproj">
+      <Project>{698837C0-17A3-4789-88C4-EFD878992B89}</Project>
+      <Name>TheS.sPerf.Advertising.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.sPerf.Common.Commands\TheS.sPerf.Common.Commands.csproj">
+      <Project>{79BED253-77C4-4A06-BE38-9A62AEF6C060}</Project>
+      <Name>TheS.sPerf.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Modules\Shared\TheS.sPerf.Common.Models\TheS.sPerf.Common.Models.csproj">
+      <Project>{0D11D276-067C-4B60-ABCC-67F9A76449AA}</Project>
+      <Name>TheS.sPerf.Common.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildBinPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
