--- a/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.BackServices.Specs/TheS.Casinova.ColorsGame.BackServices.Specs.csproj
+++ b/src/CasinovaColors/BlackAndWhite/Specs/TheS.Casinova.ColorsGame.BackServices.Specs/TheS.Casinova.ColorsGame.BackServices.Specs.csproj
@@ -84,6 +84,11 @@
       <DesignTime>True</DesignTime>
       <DependentUpon>GetRoundWinnerQuery.feature</DependentUpon>
     </Compile>
+    <Compile Include="BackServices\ListGameTableConfigurations.feature.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ListGameTableConfigurations.feature</DependentUpon>
+    </Compile>
     <Compile Include="BackServices\PayForColorsWinnerInfo.feature.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -104,6 +109,7 @@
     <Compile Include="BackServices\Specs\CommonSteps.cs" />
     <Compile Include="BackServices\Specs\CreateGameRoundSteps.cs" />
     <Compile Include="BackServices\Specs\GetRoundWinnerQuerySteps.cs" />
+    <Compile Include="BackServices\Specs\ListGameTableConfigurationsSteps.cs" />
     <Compile Include="BackServices\Specs\PayForColorsWinnerInfoN2NSteps.cs" />
     <Compile Include="BackServices\Specs\PayForColorsWinnerInfoSteps.cs" />
     <Compile Include="BackServices\Specs\SaveTableConfigurationSteps.cs" />
@@ -124,6 +130,10 @@
     <None Include="BackServices\GetRoundWinnerQuery.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
       <LastGenOutput>GetRoundWinnerQuery.feature.cs</LastGenOutput>
+    </None>
+    <None Include="BackServices\ListGameTableConfigurations.feature">
+      <Generator>SpecFlowSingleFileGenerator</Generator>
+      <LastGenOutput>ListGameTableConfigurations.feature.cs</LastGenOutput>
     </None>
     <None Include="BackServices\PayForColorsWinnerInfo.feature">
       <Generator>SpecFlowSingleFileGenerator</Generator>
