--- a/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebProviders/TheS.Casinova.Colors.WebProviders.csproj
+++ b/src/CasinovaAll/Modules/Colors/TheS.Casinova.Colors.WebProviders/TheS.Casinova.Colors.WebProviders.csproj
@@ -45,6 +45,40 @@
   <ItemGroup>
     <Folder Include="WebProviders\" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Commands\TheS.Casinova.Common.Commands.csproj">
+      <Project>{B0BA601A-7B65-4973-9E00-4F9035883877}</Project>
+      <Name>TheS.Casinova.Common.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\..\Shared\TheS.Casinova.Common.Models\TheS.Casinova.Common.Models.csproj">
+      <Project>{6079CFCD-811A-4962-B021-8D3D14C0C45B}</Project>
+      <Name>TheS.Casinova.Common.Models</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.BackServices.Contracts\TheS.Casinova.Colors.BackServices.Contracts.csproj">
+      <Project>{886E0C88-2499-4DA9-98E2-253BDC0ABE5B}</Project>
+      <Name>TheS.Casinova.Colors.BackServices.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.BackServices\TheS.Casinova.Colors.BackServices.csproj">
+      <Project>{2D3ECC97-9634-412B-A816-7B5883718E14}</Project>
+      <Name>TheS.Casinova.Colors.BackServices</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.Commands\TheS.Casinova.Colors.Commands.csproj">
+      <Project>{D96B565C-21E4-4D24-9084-B4E5B89A8AB4}</Project>
+      <Name>TheS.Casinova.Colors.Commands</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.DAL.Contracts\TheS.Casinova.Colors.DAL.Contracts.csproj">
+      <Project>{269D16C2-3BF3-44A0-98F4-33AD173A29B6}</Project>
+      <Name>TheS.Casinova.Colors.DAL.Contracts</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.DAL\TheS.Casinova.Colors.DAL.csproj">
+      <Project>{14FD3176-7EB2-4EAB-B36F-773C5CB0B420}</Project>
+      <Name>TheS.Casinova.Colors.DAL</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\TheS.Casinova.Colors.Models\TheS.Casinova.Colors.Models.csproj">
+      <Project>{D6D472FB-4D74-4852-A0C7-AF4558B46C29}</Project>
+      <Name>TheS.Casinova.Colors.Models</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
